force-app/main/default/objects/GP_Relationship__c/GP_Relationship__c.object-meta.xml
<CustomObject>
    <label>GP Relationship</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>GP Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GP Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>