force-app/main/default/objects/GP_Relationship__c/fields/adaptability__c.field-meta.xml
<CustomField>
    <fullName>adaptability__c</fullName>
    <label>adaptability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>