force-app/main/default/objects/GP_Relationship__c/fields/GrowingFieldID__c.field-meta.xml
<CustomField>
    <fullName>GrowingFieldID__c</fullName>
    <label>GrowingFieldID</label>
    <referenceTo>Growing_Field__c</referenceTo>
    <relationshipLabel>GP Relationships</relationshipLabel>
    <relationshipName>GP_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>