force-app/main/default/objects/GP_Relationship__c/fields/PlantID__c.field-meta.xml
<CustomField>
    <fullName>PlantID__c</fullName>
    <label>PlantID</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>GP Relationships</relationshipLabel>
    <relationshipName>GP_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>